@@ -63,13 +63,15 @@
         <maven-toolchains-plugin.version>1.1</maven-toolchains-plugin.version>
         <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
         <docker-maven-plugin.version>0.26.1</docker-maven-plugin.version>
-        <java.version>9</java.version>
-        <maven.source.release>1.9</maven.source.release>
-        <maven.target.release>1.9</maven.target.release>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
+        <java.version>11</java.version>
+        <maven.source.release>11</maven.source.release>
+        <maven.target.release>11</maven.target.release>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <logstash-gelf.version>1.11.2</logstash-gelf.version>
         <stub.host>localhost</stub.host>
+        <jaxb-api.version>2.2.11</jaxb-api.version>
+        <activation.version>1.1.1</activation.version>
     </properties>
     <build>
         <plugins>
@@ -87,7 +89,7 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>[1.9,)</version>
+                            <version>[11,)</version>
                         </jdk>
                     </toolchains>
                 </configuration>
@@ -124,12 +126,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>java.xml.bind</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -145,7 +141,7 @@
                 <configuration>
                     <parallel>both</parallel>
                     <threadCount>5</threadCount>
-                    <argLine>--add-modules java.xml.bind --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
@@ -164,7 +160,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <argLine>--add-modules java.xml.bind --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
@@ -313,6 +309,26 @@
                 <version>${dropwizard.version}</version>
             </dependency>
             <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
+            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>com.sun.xml.bind</groupId>-->
+                <!--<artifactId>jaxb-core</artifactId>-->
+                <!--<version>${jaxb-api.version}</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>com.sun.xml.bind</groupId>-->
+                <!--<artifactId>jaxb-impl</artifactId>-->
+                <!--<version>${jaxb-api.version}</version>-->
+            <!--</dependency>-->
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>${activation.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-unit</artifactId>
                 <version>${vertx.version}</version>
@@ -388,6 +404,22 @@
         <dependency>
             <groupId>biz.paluch.logging</groupId>
             <artifactId>logstash-gelf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.sun.xml.bind</groupId>-->
+            <!--<artifactId>jaxb-core</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.sun.xml.bind</groupId>-->
+            <!--<artifactId>jaxb-impl</artifactId>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
         </dependency>
     </dependencies>
     <profiles>
